kubernetes/apps/apps/tunnel/openwebui/access/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps-ai-stack
  annotations:
    volsync.backube/privileged-movers: "true"
